--- a/my_site/css/style.css
+++ b/my_site/css/style.css
@@ -2,6 +2,7 @@
     background-color: #EAF6F6;
     position: relative;
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .middle-container {
@@ -23,7 +24,7 @@ border-style: dotted none none;
     border-width: 8px;
     border-color: #EAF6F6;
     width: 10%;
-    margin: 7% auto 7% auto;
+    margin: 5% auto 5% auto;
 }
 
 .pfp {
@@ -31,11 +32,16 @@ border-style: dotted none none;
     width: 200px;
     
     background: url("/my_site/images/nwin.jpg") no-repeat;
-    margin: 0 auto 0 auto;
+    margin: 20px auto 20px auto;
     border-radius: 100%;
     background-size: 100%;
-    
+}
 
+.uci-pic {
+    height: 10%;
+    width: 10%;
+    border-radius: 100%;
+    margin: 2% auto 2% auto;
 }
 
 .pfp:hover {
@@ -45,18 +51,19 @@ border-style: dotted none none;
 }
 
 
-.skill-pic1 {
-    height: 20%;
-    width: 20%;
-    float: left;
-    margin-right: 30px;
+.python-skill-pic {
+    height: 25%;
+    width: 25%;
+
+    border-radius: 100%;
+    background-color: #D9F8C4;
 }
 
-.skill-pic2 {
-    height: 20%;
-    width: 20%;
-    float: right;
-    margin-left: 30px;
+.html-skill-pic {
+    height: 25%;
+    width: 25%;
+    border-radius: 100%;
+    background-color: #D9F8C4;
 }
 
 body {
@@ -107,19 +114,31 @@ h3 {
 a {
     font-family: 'Inconsolata', monospace;
     text-decoration: none;
-    color: #11999E;
+    color: #0f3c3d;
+    margin-left: 1%;
+    margin-right: 1%;
+    font-weight: bold;
 }
 
 a:hover{
     color: #EAF6F6;
 }
 
-.skill-row {
-    width: 50%;
-    margin: 100px auto 100px auto;
-    text-align: left;
-    line-height: 2;
+.skills {
+    display: table;
+    margin: 50px auto 50px auto;
 }
+.skill-row {
+    width: 33%;
+
+    line-height: 2;
+    display: table-cell;
+}
+
+.skill-row2 {
+    width: 50%;
+
+    line-height: 2;}
 
 p {
     line-height: 2;
