--- a/my_site/css/style.css
+++ b/my_site/css/style.css
@@ -14,8 +14,7 @@
 
 .bottom-container {
     background-color: #66BFBF;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 2%;
 
 }
 
@@ -159,8 +158,12 @@ p {
     font-size: 17px;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
+
   }
   
+  .gti {
+    margin-bottom: 5%;
+  }
   .btn:hover {
     background: #30e3cb;
     background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
@@ -175,6 +178,16 @@ p {
     color: #EAF6F6;
 }
 
+.footer-pic {
+    height: 3%;
+    width: 3%;
+    margin: 2%;
+}
+
+.footer-pic:hover{
+    background-color: white;
+    border-radius: 100%;
+}
 .contact-message{
     width: 40%;
     margin: 40px auto 60px;
