--- a/my_site/css/style.css
+++ b/my_site/css/style.css
@@ -1,194 +1,187 @@
 .top-container {
-    background-color: #EAF6F6;
-    position: relative;
-    padding-top: 100px;
-    padding-bottom: 100px;
+  background-color: #eaf6f6;
+  position: relative;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .middle-container {
-    background-color: white;
-    padding-bottom: 100px;
-    padding-top: 100px;
-
+  background-color: white;
+  padding-bottom: 100px;
+  padding-top: 100px;
 }
 
 .bottom-container {
-    background-color: #66BFBF;
-    padding-bottom: 2%;
-
+  background-color: #66bfbf;
+  padding-bottom: 2%;
 }
 
-hr{
-border-style: dotted none none;
-    border-width: 8px;
-    border-color: #EAF6F6;
-    width: 10%;
-    margin: 5% auto 5% auto;
+hr {
+  border-style: dotted none none;
+  border-width: 8px;
+  border-color: #eaf6f6;
+  width: 10%;
+  margin: 5% auto 5% auto;
 }
 
 .pfp {
-    height: 200px;
-    width: 200px;
-    
-    background: url("/my_site/images/nwin.jpg") no-repeat;
-    margin: 20px auto 20px auto;
-    border-radius: 100%;
-    background-size: 100%;
+  height: 200px;
+  width: 200px;
+
+  background: url("/my_site/images/nwin.jpg") no-repeat;
+  margin: 20px auto 20px auto;
+  border-radius: 100%;
+  background-size: 100%;
 }
 
 .uci-pic {
-    height: 10%;
-    width: 10%;
-    border-radius: 100%;
-    margin: 2% auto 2% auto;
+  height: 10%;
+  width: 10%;
+  border-radius: 100%;
+  margin: 2% auto 2% auto;
 }
 
 .pfp:hover {
-    background: url("/my_site/images/kai.png") no-repeat;
-    background-size: 100%;
-    border-radius: 100%;
+  background: url("/my_site/images/kai.png") no-repeat;
+  background-size: 100%;
+  border-radius: 100%;
 }
 
-
 .python-skill-pic {
-    height: 25%;
-    width: 25%;
+  height: 25%;
+  width: 25%;
 
-    border-radius: 100%;
-    background-color: #D9F8C4;
+  border-radius: 100%;
+  background-color: #d9f8c4;
 }
 
 .html-skill-pic {
-    height: 25%;
-    width: 25%;
-    border-radius: 100%;
-    background-color: #D9F8C4;
+  height: 25%;
+  width: 25%;
+  border-radius: 100%;
+  background-color: #d9f8c4;
 }
 
 body {
-    margin-right: 0px;
-    margin-left: 0px;
-    margin-top: 0px;
-    background-color: lightblue;
-    text-align: center;
-    font-family: 'Merriweather', serif;
+  margin-right: 0px;
+  margin-left: 0px;
+  margin-top: 0px;
+  background-color: lightblue;
+  text-align: center;
+  font-family: "Merriweather", serif;
 }
 
 h1 {
-    margin: 50px auto 0 auto;
-    font-size: 5rem;
-    font-family: 'Sacramento', cursive;
-    color: #66BFBF;
-    line-height: 2;
-
+  margin: 50px auto 0 auto;
+  font-size: 5rem;
+  font-family: "Sacramento", cursive;
+  color: #66bfbf;
+  line-height: 2;
 }
 
 .bottom-cloud {
-    position:absolute;
-    left: 300px;
-    bottom: 300px;
-    
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
 
 .top-cloud {
-    position: absolute;
-    right: 300px;
-    top: 50px;
+  position: absolute;
+  right: 300px;
+  top: 50px;
 }
 
 h2 {
-    font-family: 'Inconsolata', monospace;
-    font-size: 2.5rem;
-    color: #66BFBF;
-    font-weight: normal;
-
+  font-family: "Inconsolata", monospace;
+  font-size: 2.5rem;
+  color: #66bfbf;
+  font-weight: normal;
 }
 
 h3 {
-    font-family: 'Inconsolata', monospace;
-    color: #11999E;
-
+  font-family: "Inconsolata", monospace;
+  color: #11999e;
 }
 
 a {
-    font-family: 'Inconsolata', monospace;
-    text-decoration: none;
-    color: #0f3c3d;
-    margin-left: 1%;
-    margin-right: 1%;
-    font-weight: bold;
+  font-family: "Inconsolata", monospace;
+  text-decoration: none;
+  color: #0f3c3d;
+  margin-left: 1%;
+  margin-right: 1%;
+  font-weight: bold;
 }
 
-a:hover{
-    color: #EAF6F6;
+a:hover {
+  color: #eaf6f6;
 }
 
 .skills {
-    display: table;
-    margin: 50px auto 50px auto;
+  display: table;
+  margin: 50px auto 50px auto;
 }
 .skill-row {
-    width: 33%;
+  width: 33%;
 
-    line-height: 2;
-    display: table-cell;
+  line-height: 2;
+  display: table-cell;
 }
 
 .skill-row2 {
-    width: 50%;
+  width: 50%;
 
-    line-height: 2;}
+  line-height: 2;
+}
 
 p {
-    line-height: 2;
+  line-height: 2;
 }
 
 .btn {
-    background: #11cdd4;
-    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
-    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
-    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
-    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
-    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-    -webkit-border-radius: 8;
-    -moz-border-radius: 8;
-    border-radius: 8px;
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 17px;
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 17px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
 
-  }
-  
-  .gti {
-    margin-bottom: 5%;
-  }
-  .btn:hover {
-    background: #30e3cb;
-    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
-    text-decoration: none;
-  }
+.gti {
+  margin-bottom: 5%;
+}
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
 
 .footer-text {
-    color: #EAF6F6;
+  color: #eaf6f6;
 }
 
 .footer-pic {
-    height: 3%;
-    width: 3%;
-    margin: 2%;
+  height: 3%;
+  width: 3%;
+  margin: 2%;
 }
 
-.footer-pic:hover{
-    background-color: white;
-    border-radius: 100%;
+.footer-pic:hover {
+  background-color: white;
+  border-radius: 100%;
 }
-.contact-message{
-    width: 40%;
-    margin: 40px auto 60px;
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
 }
