--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ hr {
   height: 200px;
   width: 200px;
 
-  background: url("/images/nwin.jpg") no-repeat;
+  background: url("images/nwin.jpg") no-repeat;
   margin: 20px auto 20px auto;
   border-radius: 100%;
   background-size: 100%;
@@ -42,7 +42,7 @@ hr {
 }
 
 .pfp:hover {
-  background: url("/images/kai.png") no-repeat;
+  background: url("images/kai.png") no-repeat;
   background-size: 100%;
   border-radius: 100%;
 }
